style.css
* {
    box-sizing: border-box;
    margin: 0px;
    font-family: 'Inter', sans-serif;   
}

body{
    display: flex;
    justify-content: center;
}

.container{
    min-width: 550px;
    min-height: 900px;
    background: #23252C;
    display: flex;
    align-items: center;
    flex-direction: column;
    padding: 44px;
}

.info{
    width: 317px;
    height: 480px;
    background: #1A1B21;
    border-radius: 10px 10px 0px 0px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.info .profile-photo{
    width: 100%;
    height: 317px;
    overflow: hidden;
}

.info .profile-photo img{
    width: 100%;
    border-radius: 10px 10px 0px 0px;    
}

.info h2{
    font-size: 25px;
    color: #FFFFFF;
    margin-top: 20px;
}

.info h4{
    margin-top: 6px;
    font-weight: 400;
    font-size: 12px;
    color: #F3BF99;
}

.info p{
    font-weight: 400;
    font-size: 10.24px;
    line-height: 150%;
    margin: 10px 0px;
    color: #F5F5F5;
}
.info p a{
    text-decoration: none;
    color: #F5F5F5;       
}

.info .buttons{
    display: flex;
    width: 100%;
    justify-content: center;
}
.info .buttons .email-button{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    padding: 9px 13px 9px 13px;
    margin: 8px;
    width: 115px;
    height: 34px;
    background: #FFFFFF;
    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
    border-radius: 5px;
    text-decoration: none;
}

.info .buttons .email-button p{
    font-weight: 500;
    font-size: 14px;
    color: #374151;
}
.info .buttons .linkedin-button{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    padding: 9px 13px 9px 13px;
    margin: 8px;
    width: 115px;
    height: 34px;
    background: #5093E2;
    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
    border-radius: 5px;
    text-decoration: none;
}

.info .buttons .linkedin-button p{
    font-weight: 500;
    font-size: 14px;
    color: #fff;
}

.about {
    width: 317px;
    height: 240px;
    background: #1A1B21;
    padding: 25px 35px;
    color: #fff;
    display: flex;
    flex-direction: column;
}

.about .about-me{
    margin-bottom: 20px;
}

.about h4{
    font-weight: 700;
    font-size: 16px;
    color: #F5F5F5;
    margin-bottom: 5px;
}

.about p{
    font-weight: 400;
    font-size: 10px;
    line-height: 150%;
    color: #DCDCDC;
    text-align: justify;
}

.footer{
    width: 317px;
    height: 64px;
    background: #161619;
    border-radius: 0px 0px 10px 10px;
    display: flex;
    flex-direction: row;
    padding: 0px 50px;
    justify-content: space-around;
    align-items: center;
}

